corrected comments