@@ -7,7 +7,6 @@ import com.example.demo.dto.book.CreateBookRequestDto;
 import com.example.demo.model.Book;
 import com.example.demo.model.Category;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.mapstruct.AfterMapping;
 import org.mapstruct.Mapper;
 import org.mapstruct.MappingTarget;
@@ -26,7 +25,7 @@ public interface BookMapper {
     default void setCategoryIds(@MappingTarget BookDto bookDto, Book book) {
         List<Long> categoryIds = book.getCategories().stream()
                 .map(Category::getId)
-                .collect(Collectors.toList());
+                .toList();
         bookDto.setCategoryIds(categoryIds);
     }
 }
